fixed spacing on green box

--- a/textinput.css
+++ b/textinput.css
@@ -417,7 +417,7 @@ color: #0B5345 ;
     width: 100%;
     position: absolute;
     z-index: 1;
-    margin-bottom: 40%;
+ 
 }
 
 
